--- a/client/app/components/icon/icon.scss
+++ b/client/app/components/icon/icon.scss
@@ -4,12 +4,14 @@
   &--theme-bright {
     svg {
       fill: rgb(255, 255, 255);
+      width: 30px;
     }
   }
 
   &--theme-brick {
     svg {
       fill: rgb(53, 0, 9);
+      width: 30px;
     }
   }
 }
